Update version to V1007 to break cache

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
     <div class="app-container">
         <header>
-            <h1>LILITH STT v3</h1>
+            <h1>LILITH STT v3 (V1007)</h1>
             <div id="model-info" style="font-size: 0.7rem; margin-top: 4px;">WebGPU Acceleration Enabled</div>
         </header>
 
