--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
         </div>
     </div>
 
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.getRegistrations().then(registrations => {
+                for (let registration of registrations) {
+                    registration.unregister();
+                }
+            });
+        }
+    </script>
     <script type="module" src="src/main.js"></script>
 </body>
 </html>
