Hard rename to break cache (V1007)

--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
             });
         }
     </script>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main-v1007.js"></script>
 </body>
 </html>
